
  [ Mathieu Trudel-Lapierre ]
  * debian/control:
    - Update style to use trailing commas at the end of dependency lists.
    - Sort Build-Depends for clarity.
    - Drop Build-Depends on cdbs.
    - Bump debhelper Build-Depends to (>= 9).
    - Update Vcs-Bzr, Vcs-Browser and add a notice to uploaders.
  * debian/compat: bump to compat level 9.

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Fri, 23 Nov 2012 12:20:25 -0500

overlay-scrollbar (0.2.16+r356-0ubuntu2) quantal-proposed; urgency=low

  * Reuploaded now that gtk2 has a fix for it

 -- Didier Roche <didrocks@ubuntu.com>  Tue, 25 Sep 2012 13:12:47 +0200

overlay-scrollbar (0.2.16+r356-0ubuntu1) quantal-proposed; urgency=low

  * New upstream release:
    - remove a warning
    - update the blacklist
  * debian/patches/01_workaround_qt_overlay_crash.patch:
    avoid crashes in Qt apps, removing the overlay scrollbars for them
    (LP: #1005677)

 -- Didier Roche <didrocks@ubuntu.com>  Mon, 24 Sep 2012 16:24:32 +0200

overlay-scrollbar (0.2.16+r353-0ubuntu2) quantal; urgency=low

  * debian/control: 
    - drop hardcoded libgtk depends and let the shlibs get those
    - let the -gtk packages depends on the overlay-scrollbar binary which 
      has the schemas glib schemas

 -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 24 Aug 2012 19:03:45 +0200

overlay-scrollbar (0.2.16+r353-0ubuntu1) quantal; urgency=low

  * Updated to r353, fixes a segfault issue (lp: #1012698)

 -- Sebastien Bacher <seb128@ubuntu.com>  Thu, 09 Aug 2012 15:56:42 +0200

overlay-scrollbar (0.2.16+r348-0ubuntu1) quantal; urgency=low

  * New snapshot r348 from trunk
  * debian/control
    - removed -dev and lib packages
    - make new gtk module packages replace and conflict shared lib 
      and devel packages << 0.2.16+r348
  * debian/*.install
    - no longer a shared library, installs as a gtk module
  * debian/*.symbols
    - removed, no longer built as a shared lib
  * debian/ayatana-scrollbar.py