@@ -11,6 +11,8 @@ overlay-scrollbar (0.2.16+r357-0ubuntu2) UNRELEASED; urgency=low
     - Bump debhelper Build-Depends to (>= 9).
     - Update Vcs-Bzr, Vcs-Browser and add a notice to uploaders.
   * debian/compat: bump to compat level 9.
+  * debian/rules:
+    - Convert from cdbs to using the dh9 sequencer.
 
  -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Fri, 23 Nov 2012 12:20:25 -0500
 
